--- a/css/root.css
+++ b/css/root.css
@@ -31,6 +31,7 @@ body, html
 	margin: 0px;
 }
 
+/* main window */
 #pixiwindow
 {
 	position: relative;
@@ -44,9 +45,47 @@ body, html
 	border-radius: 5px;
 	overflow: hidden;
 	image-rendering: pixelated;
-	image-rendering: crisp-edges;}
+	image-rendering: crisp-edges;
+}
 
-/* set borders here to view the different buffers. */
+/* console window inside main window */
+#jbashWindow
+{
+	position: absolute;
+	width: 100%;
+	background-image:url('../images/transblue_b.png');
+	background-size: 4px auto;
+/*	border: 1px solid #FF00FF;*/
+	width: 100%;
+	height: 75%;
+	image-rendering: pixelated;
+	image-rendering: crisp-edges;
+	font-size: 12pt;
+	font-weight: bold;
+	font-family: monospace;
+	z-index: 10000;
+	color: #FFFFFA;
+}
+
+#jBashInput
+{
+	border: 2px solid #0000AA;
+	border-left: 0px;
+	border-right: 0px;
+	position: absolute;
+	left: 0px;
+	bottom: 0px;
+	padding: 5px;
+	height: 35px;
+	width: 100%;
+	font-size: 12pt;
+	font-family: monospace;
+	color: #0000AA;
+	background-image: url('../images/transwhite_b.png'); /* b for block */
+}
+
+/* set borders here to view the different buffers, also inside main window 
+ 	width and height are set in code by now. */
 #GEdiBuf0
 {
 	/* border: 1px solid #FF0000; */
@@ -63,6 +102,7 @@ body, html
 	overflow: hidden;
 }
 
+/* standard sprite settings. */
 .sprite
 {
 	position: absolute;
