--- a/css/root.css
+++ b/css/root.css
@@ -56,8 +56,8 @@ body, html
 	background-image:url('../images/transblue_b.png');
 	background-size: 4px auto;
 /*	border: 1px solid #FF00FF;*/
-	width: 100%;
-	height: 75%;
+	width: 640px;
+	height: 350px;
 	image-rendering: pixelated;
 	image-rendering: crisp-edges;
 	font-size: 12pt;
