--- a/css/root.css
+++ b/css/root.css
@@ -67,28 +67,35 @@ body, html
 /*	border: 1px solid #FF00FF;*/
 	width: 640px;
 	height: 350px;
-	image-rendering: pixelated;
-	image-rendering: crisp-edges;
-	font-size: 12pt;
-	font-weight: bold;
-	font-family: 'font_console', monospace;
 	z-index: 10000;
-	color: #FFFFFA;
-	text-align: left;
 }
 
-#jBashInput
+#jbashConsole
+{
+	font-family: 'font_console', monospace;
+	position: absolute;
+	width: 100%;
+	height: 350px;
+	overflow-y: scroll;
+	color: #FFFFFA;
+	text-align: left;
+	font-size: 12pt;
+	font-weight: bold;
+	image-rendering: pixelated;
+	image-rendering: crisp-edges;
+}
+
+#jBashInnerInput
 {
 	border: 2px solid #0000AA;
 	border-left: 0px;
 	border-right: 0px;
 	position: absolute;
-	left: 0px;
-	bottom: 0px;
+	margin-top: -12px;
 	padding: 5px;
-	height: 35px;
-	width: 100%;
-	font-size: 12pt;
+	height: 25px;
+	width: 600px;
+	font-size: 10pt;
 	font-family: 'font_console', monospace;
 	color: #0000AA;
 	background-image: url('../data/images/transwhite_b.png'); /* b for block */
