--- a/css/root.css
+++ b/css/root.css
@@ -7,8 +7,8 @@ body, html
 	margin: 0px;
 }
 
-/* FONT NOT WORKING, WHY? */
-@fontface
+/* the console font. */
+@font-face
 {
 	font-family: "font_console";
 	src: url('../data/fonts/pcsenior.ttf') format("truetype");
@@ -82,18 +82,21 @@ body, html
 
 #jBashInnerInput
 {
-	border: 2px solid #0000AA;
+	border: 0px;
+/*	border: 2px solid #9999FA;
 	border-left: 0px;
 	border-right: 0px;
+	border-top: 0px;*/
 	position: absolute;
 	margin-top: -12px;
 	padding: 5px;
 	height: 25px;
 	width: 600px;
-	font-size: 10pt;
+	font-size: 12pt;
 	font-family: 'font_console', monospace;
-	color: #0000AA;
-	background-image: url('../data/images/transwhite_b.png'); /* b for block */
+	color: #FFFF99;
+	background-color: transparent;
+	/*background-image: url('../data/images/transwhite_b.png'); /* b for block */
 	text-align: left;
 }
 
